<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".NewMovie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/title"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/desc"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/desc"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/link"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/link"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginEnd="4dp"/>

        <Button
            android:id="@+id/catalogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catalogue"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

</LinearLayout>